--- a/roy-common/Cargo.toml
+++ b/roy-common/Cargo.toml
@@ -11,6 +11,7 @@ user = ["aya"]
 
 [dependencies]
 aya = { workspace = true, optional = true }
+bytemuck = { version = "*", default-features = false, features = ["derive"] }
 
 [lib]
 path = "src/lib.rs"
