--- a/roy-ebpf/Cargo.toml
+++ b/roy-ebpf/Cargo.toml
@@ -10,7 +10,7 @@ aya-ebpf = { workspace = true }
 aya-log-ebpf = { workspace = true }
 
 [build-dependencies]
-which = { workspace = true }
+which = { version = "*" }
 
 [[bin]]
 name = "roy"
