--- a/roy-common/Cargo.toml
+++ b/roy-common/Cargo.toml
@@ -11,7 +11,7 @@ user = ["aya"]
 
 [dependencies]
 aya = { workspace = true, optional = true }
-bytemuck = { version = "*", default-features = false, features = ["derive"] }
+bytemuck = { workspace = true }
 
 [lib]
 path = "src/lib.rs"
