--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,14 @@ members = ["roy", "roy-common", "roy-ebpf"]
 default-members = ["roy", "roy-common"]
 
 [workspace.package]
+version = "2026.2.3"
 license = "MIT OR Apache-2.0"
 edition = "2024"
+description = "Kubernetes AdmissionControl webhook to validate or mutate Ingress/Gateway to ensure it contains TLS setup"
+repository = "https://github.com/Magicloud/ingress-tls"
+keywords = ["Kubernetes", "Ingress", "TLS"]
+categories = ["config"]
+readme = "README.md"
 
 [workspace.dependencies]
 aya = { git = "https://github.com/aya-rs/aya", default-features = false }
@@ -15,17 +21,6 @@ aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
 aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
 
 bytemuck = { version = "*", default-features = false, features = ["derive"] }
-# anyhow = { version = "1", default-features = false }
-# cargo_metadata = { version = "0.23.0", default-features = false }
-# # `std` feature is currently required to build `clap`.
-# #
-# # See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
-# clap = { version = "4.5.20", default-features = false, features = ["std"] }
-# env_logger = { version = "0.11.5", default-features = false }
-# libc = { version = "0.2.159", default-features = false }
-# log = { version = "0.4.22", default-features = false }
-# tokio = { version = "1.40.0", default-features = false }
-# which = { version = "6.0.0", default-features = false }
 
 [profile.release.package.roy-ebpf]
 debug = 2
