--- a/roy-common/Cargo.toml
+++ b/roy-common/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "roy-common"
-version = "0.1.0"
+version.workspace = true
 edition.workspace = true
-
+description.workspace = true
 license.workspace = true
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
+readme.workspace = true
 
 [features]
 default = []
@@ -12,6 +16,3 @@ user = ["aya"]
 [dependencies]
 aya = { workspace = true, optional = true }
 bytemuck = { workspace = true }
-
-[lib]
-path = "src/lib.rs"
