--- a/roy/Cargo.toml
+++ b/roy/Cargo.toml
@@ -15,7 +15,9 @@ roy-common = { path = "../roy-common", features = ["user"] }
 aya = { workspace = true }
 aya-log = { workspace = true }
 bytemuck = { workspace = true, default-features = false, features = ["derive"] }
-anyhow = { version = "*" }
+
+eyre = { version = "*" }
+color-eyre = { version = "*" }
 env_logger = { version = "*" }
 libc = { version = "*" }
 log = { version = "*" }
@@ -26,7 +28,7 @@ tokio = { version = "*", features = [
     "net",
     "signal",
 ] }
-clap = { version = "*", features = ["derive"] }
+# clap = { version = "*", features = ["derive"] }
 k8s-openapi = { version = "*", features = ["earliest"] }
 kube = { version = "*" }
 async_from = { version = "*" }
@@ -38,7 +40,7 @@ ipnetwork = { version = "*" }
 [build-dependencies]
 aya-build = { workspace = true }
 
-anyhow = { version = "*" }
+eyre = { version = "*" }
 cargo_metadata = { version = "*" }
 # TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
 # it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
